--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,5 @@ jobs:
     - name: Install dependencies
       run: npm install
     - run: npm run build --if-present
-    - run: npm app.js 
+    # - run: npm app.js  # !!
     - run: npm test
